src/runtime/less/ts-forms.less
/* ... */
// Multi-fields  ...............................................................

.ts-form {
	.ts-fieldset.ts-multi {
		> label {
			display: inline-block;
			vertical-align: top;
			padding-right: @ts-unit-quarter;
			span {
				right: @ts-unit-quarter;
			}
			+ label {
				padding-left: @ts-unit-quarter;
				span {
					left: @ts-unit-quarter;
				}
			}
			&:last-child {
				padding-right: @ts-unit-half;
				span {
					right: @ts-unit-half;
				}
			}
			&:nth-child(2) + label {
				display: none;
			}
		}
		&,
		&.ts-1-1 {
			label {
				width: 100%/2;
			}
		}
		&.ts-1-2 {
			label:nth-child(1) {
				width: 100%/3;
			}
			label:nth-child(2) {
				width: 100%/1.5;
			}
		}
		&.ts-2-1 {
			label:nth-child(1) {
				width: 100%/1.5;
			}
			label:nth-child(2) {
				width: 100%/3;
			}
		}
		&.ts-1-1-1 {
			label {
				width: 100%/3;
				&:nth-child(2) + label {
					display: inline-block;
				}
			}
		}
	}
}

// Disabled & readonly .........................................................

.ts-form {
	label {
		&.ts-readonly,
		&.ts-disabled {
			> input,
			> textarea {
				&,
				&[disabled],
				&[readonly] {
					padding-right: @ts-unit-plus;
				}
			}
			> textarea {
				overflow: hidden;
			}
			&:not(.ts-option):not(.ts-switchlabel) {
				&:after {
					.ts-mixin-icon(@ts-fontsize-medium);
					content: 'V'; // lock icon
					position: absolute;
					top: @ts-unit-plus;
					right: @ts-unit-half;
					width: @ts-unit-plus;
					height: @ts-unit-plus;
					line-height: @ts-unit-plus;
					pointer-events: none;
				}
				&:not(.ts-haslabel):after {
					top: 0;
				}
			}
		}
		&.ts-disabled {
			> .ts-field,
			> span,
			&:after {
				color: @ts-color-gray;
			}
			.ts-field {
				&.ts-text {
					// &.ts-date
					border-color: @new-bordercolor;
				}
			}
		}
	}
}

// Customizing it ..............................................................

.ts-form {
	label.ts-customiconlabel:not(.ts-option):not(.ts-switchlabel) {
		&:after {
			.ts-mixin-icon(@ts-fontsize-medium);
			content: ~'attr(data-ts-icon)';
			position: absolute;
			right: @ts-unit-half;
			left: auto;
			bottom: 26px;
			width: @ts-unit-plus;
			color: @ts-color-slate-lightest;
			line-height: @ts-unit-plus;
		}
		&:not(.ts-disabled):not(.ts-readonly):after {
			line-height: 0;
		}
		&.ts-disabled::after {
			color: @ts-color-gray;
		}
		&.ts-readonly::after {
			color: @ts-color-black;
		}
	}
}

// Autocomplete ................................................................

.ts-form {
	.ts-autocomplete-list {
		position: absolute;
		left: 0;
		right: 0;
		z-index: 1;
		background: @ts-color-gray-darker;
		border-bottom: 1px solid @ts-color-black;
		max-height: ((@ts-unit * 7.5) - 1px);
		margin: 1px @ts-unit-half 0;
		overflow-y: auto;
		> li {
			position: relative;
			height: @ts-unit-plus;
			line-height: @ts-unit-plus;
			border-bottom: 1px solid @ts-color-black;
			padding: 0 7px;
			font-size: @ts-fontsize-mini;
			overflow: hidden;
			background: @ts-color-slate-light;
			color: fade(@ts-color-white, 70%);
			text-overflow: ellipsis;
			cursor: pointer;
			&:after {
				position: absolute;
				right: @ts-unit-half;
				top: 50%;
				line-height: 0;
				font-style: normal;
			}
			&.ts-autocomplete-results {
				background: @ts-color-slate-lightest;
				font-style: italic;
			}
			&.ts-autocomplete-results {
				&.ts-autocomplete-selected:after {
					content: '↓';
					font-style: normal;
				}
			}
			&:last-child {
				border-bottom: 1px solid transparent;
			}
			&.ts-autocomplete-selected {
				color: @ts-color-white;
				background: @ts-color-blue;
				&:after {
					content: '↲';
				}
			}
			&:hover {
				color: @ts-color-white;
				background: @ts-color-slate-lighter;
			}
			b {
				font-weight: @ts-fontweight;
				text-decoration: underline;
			}
		}
	}
}

// Preview .....................................................................

.ts-form {
	// TODO: For the placeholder in the preview mode we are showing a gray text which can be misleading
	// maybe we should just hide it in preview mode
	&.ts-preview {
		.ts-readonly {
			&:not(.ts-option):not(.ts-switchlabel) {
				&:after {
					display: none;
				}
			}
		}
		.ts-datelabel,
		.ts-fakelabel {
			&:before {
				display: none !important;
			}
		}
		.ts-field.ts-text,
		.ts-field.ts-select {
			cursor: default;
			border: 1px solid transparent;
			padding-left: 0;
			padding-right: 0;
			&.ts-fakeselectinput {
				display: none;
			}
		}
	}
}

